# P1

./: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  UI.c  UI.h  graph.c  graph.h  main.c  readFiles.c  readFiles.h  routes.c  routes.h  routes.txt  rutedata.txt  simulation.txt  stations.h  time_calc.c  time_calc.h  trains.c  trains.h  trains.txt
test/: CMakeLists.txt
